test/Fail/Issue2248_COMPILED_TYPE.err
Issue2248_COMPILED_TYPE.agda:23,1-34: error: [GenericError]
Haskell types can only be given for postulates.
